<resources>
    <string name="app_name">Cocktails</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="profil">Profil</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>